dev/04.drone/server/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone
  namespace: dev
  labels:
    release: drone
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: drone
