dev/04.drone/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drone
  namespace: dev
  labels:
    release: drone
  annotations:
      traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - secretName: drone-tls
  rules:
  - host: drone.champiat.lan
    http:
      paths:
      - backend:
          service:
            name: drone
            port:
              number: 80
        path: /
        pathType: Prefix
